[gd_scene load_steps=2 format=2]

[ext_resource path="res://Var0.gd" type="Script" id=1]

[node name="Var0" type="Control"]
margin_right = 521.0
margin_bottom = 345.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 242.0
margin_top = 175.0
margin_right = 379.0
margin_bottom = 219.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
