[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/img/f1.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Katty1.png" type="Texture" id=4]
[ext_resource path="res://assets/img/ThoughtBubble.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=6]

[node name="Var0" type="Control"]
margin_right = 1440.0
margin_bottom = 900.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1062.73
margin_top = 493.273
margin_right = 1400.73
margin_bottom = 542.273
theme = ExtResource( 6 )
text = "Cerrado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1062.73
margin_top = 353.273
margin_right = 1393.73
margin_bottom = 406.273
theme = ExtResource( 6 )
text = "Abierto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image" type="Sprite" parent="."]
position = Vector2( 815, 492.082 )
scale = Vector2( 1.4159, 1.90837 )
texture = ExtResource( 3 )

[node name="Katty1" type="Sprite" parent="."]
position = Vector2( 337, 505 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 870.5, 142.705 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -228.328
margin_top = -19.0273
margin_right = 222.672
margin_bottom = 18.9727
theme = ExtResource( 6 )
text = "¿Cuál es el candado correcto?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_cerrado"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_abierto"]
